[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/spaz-uimockup.png" type="Texture" id=1]
[ext_resource path="res://Area2D_Mes.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0001.png" type="Texture" id=3]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0008.png" type="Texture" id=4]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0004.png" type="Texture" id=5]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0007.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0003.png" type="Texture" id=7]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0005.png" type="Texture" id=8]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0006.png" type="Texture" id=9]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0002.png" type="Texture" id=10]
[ext_resource path="res://Messages.gd" type="Script" id=11]
[ext_resource path="res://Assets/Animations/NotesButton/spaz-notebutton1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Animations/NotesButton/spaz-notebutton2.png" type="Texture" id=13]
[ext_resource path="res://Area2D_Note.gd" type="Script" id=14]
[ext_resource path="res://MessagePopup.gd" type="Script" id=15]
[ext_resource path="res://NotesPopup.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 4.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "unread",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 5.5 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "unread",
"speed": 5.0
} ]

[node name="UIModulesSprite" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StreamPanel" type="Sprite" parent="."]
position = Vector2( 135.948, 88.9458 )
texture = ExtResource( 1 )

[node name="Messages" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Control" parent="Messages"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D_Mes" type="Area2D" parent="Messages"]
position = Vector2( 248.968, 12.1088 )
script = ExtResource( 2 )

[node name="CollisionShape2D_Mes" type="CollisionShape2D" parent="Messages/Area2D_Mes"]
shape = SubResource( 1 )

[node name="TextureButton_Mes" type="TextureButton" parent="Messages/Area2D_Mes"]
margin_left = -6.2785
margin_top = -3.91827
margin_right = 5.7215
margin_bottom = 5.08173
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite_Mes" type="AnimatedSprite" parent="Messages/Area2D_Mes"]
frames = SubResource( 2 )
animation = "New Anim"

[node name="MessagePopup" type="Sprite" parent="Messages/Area2D_Mes"]
position = Vector2( -55.7939, 135.731 )
script = ExtResource( 15 )

[node name="ClosePopup_Mes" type="TextureButton" parent="Messages/Area2D_Mes/MessagePopup"]
margin_left = -39.0
margin_top = -40.0
margin_right = -29.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notes" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Control" parent="Notes"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D_Note" type="Area2D" parent="Notes"]
position = Vector2( 9.04643, 65.4288 )
script = ExtResource( 14 )

[node name="CollisionShape2D_Note" type="CollisionShape2D" parent="Notes/Area2D_Note"]
shape = SubResource( 3 )

[node name="AnimatedSprite_Note" type="AnimatedSprite" parent="Notes/Area2D_Note"]
frames = SubResource( 4 )
animation = "unread"

[node name="TextureButton_Note" type="TextureButton" parent="Notes/Area2D_Note"]
margin_left = -6.02778
margin_top = -5.53981
margin_right = 5.97223
margin_bottom = 5.46019
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotesPopup" type="Sprite" parent="Notes/Area2D_Note"]
position = Vector2( 79.9857, 14.6842 )
script = ExtResource( 16 )

[node name="ClosePopup_Notes" type="TextureButton" parent="Notes/Area2D_Note/NotesPopup"]
anchor_left = 0.028
anchor_top = 0.016
anchor_right = 0.076
anchor_bottom = 0.054
margin_left = -76.032
margin_top = -67.048
margin_right = -32.944
margin_bottom = -59.912
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_entered" from="Messages/Message" to="Messages/Area2D_Mes" method="_on_Message_tree_entered"]
[connection signal="pressed" from="Messages/Area2D_Mes/TextureButton_Mes" to="Messages/Area2D_Mes" method="_on_TextureButton_Mes_pressed"]
[connection signal="pressed" from="Messages/Area2D_Mes/TextureButton_Mes" to="Messages/Area2D_Mes/MessagePopup" method="_on_TextureButton_Mes_pressed"]
[connection signal="pressed" from="Messages/Area2D_Mes/MessagePopup/ClosePopup_Mes" to="Messages/Area2D_Mes/MessagePopup" method="_on_ClosePopup_Mes_pressed"]
[connection signal="tree_entered" from="Notes/Note" to="Notes/Area2D_Note" method="_on_Note_tree_entered"]
[connection signal="pressed" from="Notes/Area2D_Note/TextureButton_Note" to="Notes/Area2D_Note/NotesPopup" method="_on_TextureButton_Note_pressed"]
[connection signal="pressed" from="Notes/Area2D_Note/NotesPopup/ClosePopup_Notes" to="Notes/Area2D_Note/NotesPopup" method="_on_ClosePopup_Notes_pressed"]
